complex/k8s/server-deployment.yaml
# 14-204 Express API (ie multi-server) config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server   # could be mylabel:thispart (arbitrary)
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: peternjenkin/multi-server  # key/values environment variables to be added here
          ports:
            - containerPort: 5000
