complex/k8s/worker-deployment.yaml
# 14-207 Worker Deployment (config for same)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # just 1 for now - scaling to-do later
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: peternjenkin/multi-worker
        # to do - environment variables (once redis set up & CI on the way)
# NB in system design diagram, nothing needing to connect to worker - so no ClusterIP service needed to allow traffic
